@@ -1,3 +1,8 @@
+Mon Dec 14 12:40:10 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* object.c (rb_Float): Allow results of to_f to be NaN
+	  [ruby-core:26733]
+
 Mon Dec 14 12:35:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (proc_invoke): unbound block created by define_method
